--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>grammencommunications</groupId>
-    <artifactId>SyncService</artifactId>
+    <artifactId>tab-collection-2021</artifactId>
     <version>01</version>
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
